--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name":"my first PWA",
+    "name":"My First PWA",
     "short_name":"PWA APP",
     "start_url":".",
     "background_color":"green",
